# ntx

./: .air.toml  .gitignore  .golangci.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  go.mod  go.sum  main.go  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  sqlc.yaml
.claude/skills/: shape-up.md
adapters/meroshare/: parser.go  parser_test.go
apps/api/: .golangci.yaml  Dockerfile  go.mod  go.sum  sqlc.yaml
apps/web/: eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  wrangler.jsonc
cmd/: handle_help.go  handle_import.go  handle_portfolio.go  handle_prices.go  handle_test_db.go  handle_test_wac.go  main.go
cmd/ntx/: backfill.go  flags.go  main.go  version.go
cmd/ntxd/: main.go
configs/: config.toml
core/: domain.go  domain_test.go
docs/: FRONTEND_DESIGN.md  VISION.md  architecture.md  backfill.md  checklist.md  implementation-checklist.md  phase1-foundation.md  phase2-enhancements.md  phase3-advanced.md
docs/cycles/: 2026-q1-cycle.md  TRACKER.md
docs/pitches/: dividend-tracking.md  market-service.md  realized-pnl-fifo.md  tui-dashboard.md  web-dashboard.md
openspec/: CONTEXT.md
proto/: buf.gen.yaml  buf.yaml
requirements/: phase1-foundation-complete.md  phase1-foundation-setup.md  phase1-implementation.md  phase2-database-tooling.md  phase3-portfolio-management.md
scripts/: DEBUG_SUMMARY.md  build_poush_nav.py  extract_nav.py  fix_poush_nav.py  main.py  pyproject.toml
scripts/data/: funds.json  images.json  nav_2026_01.json
web/: package.json  pnpm-lock.yaml  svelte.config.js
(+366 files in other folders)
